[Govindan Ashish] refactor cleanup in ParkingStrategy